Name:                diagrams-lib
Version:             1.4.3
Synopsis:            Embedded domain-specific language for declarative graphics
Description:         Diagrams is a flexible, extensible EDSL for creating
                     graphics of many types.  Graphics can be created
                     in arbitrary vector spaces and rendered with
                     multiple backends.  diagrams-lib provides a
                     standard library of primitives and operations for
                     creating diagrams.  To get started using it, see
                     the "Diagrams" module, and refer to the tutorials and
                     documentation on the diagrams website,
                     <http://diagrams.github.io>.
Homepage:            http://diagrams.github.io
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-lib/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       1.18
Extra-source-files:  CHANGELOG.md, README.markdown, diagrams/*.svg
Extra-doc-files:     diagrams/*.svg
Tested-with:         GHC ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.3 || ==8.6.5 || ==8.8.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-lib.git

Library
  Exposed-modules:     Diagrams,
                       Diagrams.Prelude,
                       Diagrams.Align,
                       Diagrams.Angle,
                       Diagrams.Animation,
                       Diagrams.Animation.Active,
                       Diagrams.Attributes,
                       Diagrams.Attributes.Compile,
                       Diagrams.Backend.CmdLine,
                       Diagrams.BoundingBox,
                       Diagrams.Combinators,
                       Diagrams.Coordinates,
                       Diagrams.CubicSpline,
                       Diagrams.CubicSpline.Boehm,
                       Diagrams.CubicSpline.Internal,
                       Diagrams.Deform
                       Diagrams.Direction,
                       Diagrams.Envelope,
                       Diagrams.LinearMap,
                       Diagrams.Located,
                       Diagrams.Names,
                       Diagrams.Parametric,
                       Diagrams.Parametric.Adjust,
                       Diagrams.Path,
                       Diagrams.Points,
                       Diagrams.Query,
                       Diagrams.Segment,
                       Diagrams.Size,
                       Diagrams.Tangent,
                       Diagrams.ThreeD,
                       Diagrams.ThreeD.Align,
                       Diagrams.ThreeD.Attributes,
                       Diagrams.ThreeD.Camera,
                       Diagrams.ThreeD.Deform,
                       Diagrams.ThreeD.Light,
                       Diagrams.ThreeD.Shapes,
                       Diagrams.ThreeD.Size,
                       Diagrams.ThreeD.Transform,
                       Diagrams.ThreeD.Projection,
                       Diagrams.ThreeD.Types,
                       Diagrams.ThreeD.Vector,
                       Diagrams.Trace,
                       Diagrams.Trail,
                       Diagrams.TrailLike,
                       Diagrams.Transform,
                       Diagrams.Transform.ScaleInv,
                       Diagrams.Transform.Matrix,
                       Diagrams.TwoD,
                       Diagrams.TwoD.Adjust,
                       Diagrams.TwoD.Align,
                       Diagrams.TwoD.Arc,
                       Diagrams.TwoD.Arrow,
                       Diagrams.TwoD.Arrowheads,
                       Diagrams.TwoD.Attributes,
                       Diagrams.TwoD.Combinators,
                       Diagrams.TwoD.Curvature,
                       Diagrams.TwoD.Deform,
                       Diagrams.TwoD.Ellipse,
                       Diagrams.TwoD.Image,
                       Diagrams.TwoD.Model,
                       Diagrams.TwoD.Offset,
                       Diagrams.TwoD.Path,
                       Diagrams.TwoD.Points,
                       Diagrams.TwoD.Polygons,
                       Diagrams.TwoD.Segment,
                       Diagrams.TwoD.Segment.Bernstein,
                       Diagrams.TwoD.Size,
                       Diagrams.TwoD.Shapes,
                       Diagrams.TwoD.Text,
                       Diagrams.TwoD.Transform,
                       Diagrams.TwoD.Types,
                       Diagrams.TwoD.Vector,
                       Diagrams.Util
  Build-depends:       base >= 4.9,
                       containers >= 0.3,
                       array >= 0.3,
                       semigroups >= 0.3.4,
                       monoid-extras >= 0.3,
                       dual-tree >= 0.2,
                       diagrams-core >= 1.4,
                       diagrams-solve >= 0.1,
                       active >= 0.2,
                       colour >= 2.3.2,
                       data-default-class < 0.2,
                       fingertree >= 0.1,
                       intervals >= 0.7,
                       lens >= 4.6,
                       tagged >= 0.7,
                       optparse-applicative >= 0.11,
                       filepath,
                       JuicyPixels >= 3.3.4,
                       hashable >= 1.1,
                       linear >= 1.20.1,
                       adjunctions >= 4.0,
                       distributive >=0.2.2,
                       process >= 1.1,
                       fsnotify >= 0.2.1,
                       directory >= 1.2,
                       unordered-containers >= 0.2,
                       text >= 0.7.1,
                       mtl >= 2.0,
                       transformers >= 0.3.0,
                       profunctors >= 5.0,
                       exceptions >= 0.6,
                       cereal >=0.4.1.1,
                       bytestring >=0.9
  if impl(ghc < 7.6)
    Build-depends: ghc-prim
  if !impl(ghc >= 8.0)
    build-depends: fail >= 4.9.0.0
  Hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
  other-extensions: BangPatterns, CPP, DefaultSignatures, DeriveDataTypeable,
    DeriveFunctor, DeriveGeneric, EmptyDataDecls, ExistentialQuantification,
    GADTs, GeneralizedNewtypeDeriving, NoMonomorphismRestriction, Rank2Types,
    RankNTypes, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell,
    TypeOperators, TypeSynonymInstances, UndecidableInstances, ViewPatterns,
    LambdaCase

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: Diagrams.Test.Direction
               , Diagrams.Test.Trail
               , Diagrams.Test.Transform
               , Diagrams.Test.Transform.Matrix
               , Diagrams.Test.TwoD.Offset
               , Diagrams.Test.TwoD.Segment
               , Diagrams.Test.TwoD
               , Diagrams.Test.Angle
               , Instances
  hs-source-dirs: test
  build-depends:       base,
                       tasty >= 0.10,
                       tasty-hunit >= 0.9.2,
                       tasty-quickcheck >= 0.8,
                       QuickCheck >= 2.7,
                       deepseq >= 1.3,
                       diagrams-lib,
                       lens,
                       distributive,
                       numeric-extras,
                       diagrams-solve
  default-language:    Haskell2010

executable benchmarks-exe
  type: exitcode-stdio-1.0
  main-is:Speed.hs
  hs-source-dirs:test
  default-language: Haskell2010
  build-depends:
    base < 5,
    gauge,
    diagrams-core,
    diagrams-lib

benchmark benchmarks
  type: exitcode-stdio-1.0
  main-is:Speed.hs
  hs-source-dirs:test
  default-language: Haskell2010
  build-depends:
    base < 5,
    gauge,
    diagrams-core,
    diagrams-lib
